# SpeedNet

./: CMakeLists.txt  Layer.cpp  Layer.h  Neuron.cpp  Neuron.h  README.md  main  main.cpp
.github/workflows/: cmake.yml  cpp-tests.yml
src/: Layer.cpp  Layer.h  LayerDefinition.cpp  LayerDefinition.h  NeuralNet.cpp  NeuralNet.h  Perceptron.cpp  Perceptron.h  SpeedNet.h
src/activations/: Activation.h  ActivationFactory.cpp  ActivationFactory.h  Elu.cpp  Elu.h  LeakyRelu.cpp  LeakyRelu.h  Linear.cpp  Linear.h  Relu.cpp  Relu.h  Selu.cpp  Selu.h  Sigmoid.cpp  Sigmoid.h  Softplus.cpp  Softplus.h  Step.cpp  Step.h  Tanh.cpp  Tanh.h
src/exceptions/: InvalidInputSize.cpp  InvalidInputSize.h  InvalidLayer.cpp  InvalidLayer.h  InvalidNetworkSize.cpp  InvalidNetworkSize.h
src/random/: RandomGenerator.cpp  RandomGenerator.h
src/thread/: LayerThreadPool.cpp  LayerThreadPool.h
test/: Test.cpp
